Corriger un bogue dans le template du manifeste

--- a/app/views/home/manifest.haml
+++ b/app/views/home/manifest.haml
@@ -7,7 +7,7 @@
     %h3 Le manifeste
     %ol
       %li
-        EDans une démocratie digne de ce nom, le peuple est souverain. C’est donc à lui de dicter les règles du jeu.
+        Dans une démocratie digne de ce nom, le peuple est souverain. C’est donc à lui de dicter les règles du jeu.
       %li
         Présentement, la souveraineté du peuple est bafouée de toutes parts. Ceux que nous avons choisis pour nous représenter, une fois élus, servent davantage l’oligarchie économique que la population en général.      
       %li
@@ -19,7 +19,7 @@
       %li
         Pour écrire notre constitution, il faut avoir recours au peuple souverain, car les partis politiques sont sur ce sujet en conflit d’intérêts. Ce n’est pas aux gens au pouvoir d’écrire les règles du pouvoir.
       %li
-         L’assemblée par laquelle le peuple peut exercer sa souveraineté et son pouvoir constituant de façon légitime, ordonnée et efficace est ce qu’on appelle une Assemblée constituante. Son rôle est de consulter la population et de proposer, en toute liberté, un texte de constitution pour adoption par référendum. Elle doit être représentative, non partisane et libre de toute pression indue, donc composée idéalement de citoyens tirés au sort. Elle doit pouvoir recourir à toutes les ressources et expertises nécessaires pour faire son travail. Le débat public entourant son travail doit être encadré de façon à éviter autant que possible le contrôle de l’information par des intérêts particuliers.   
+        L’assemblée par laquelle le peuple peut exercer sa souveraineté et son pouvoir constituant de façon légitime, ordonnée et efficace est ce qu’on appelle une Assemblée constituante. Son rôle est de consulter la population et de proposer, en toute liberté, un texte de constitution pour adoption par référendum. Elle doit être représentative, non partisane et libre de toute pression indue, donc composée idéalement de citoyens tirés au sort. Elle doit pouvoir recourir à toutes les ressources et expertises nécessaires pour faire son travail. Le débat public entourant son travail doit être encadré de façon à éviter autant que possible le contrôle de l’information par des intérêts particuliers.   
       %li
         L’Assemblée constituante doit idéalement être convoquée par l’Assemblée nationale pour s’assurer que la Constitution qui en résultera, une fois adoptée par référendum, ne puisse être écartée par les pouvoirs en place, au Québec, au Canada et à l’international.
       
