Remplacer assemblées constituantes régionales du Québec par assemblées constituantes québécoises

--- a/app/views/hives/index.haml
+++ b/app/views/hives/index.haml
@@ -1,5 +1,5 @@
 -content_for :page_title do
-  Liste des assemblées constituantes régionales du Québec (ACRQ)
+  Liste des Assemblées constituantes régionales québécoises (ACRQ)
 
 -breadcrumb :hives
 .row
