Changements mineurs au manifeste

--- a/app/views/home/_mission_nav.haml
+++ b/app/views/home/_mission_nav.haml
@@ -1,4 +1,4 @@
-%p * À noter que les énoncés de mission sont toujours en processus d'approbation par les membres  
+%p * Veuillez noter que les énoncés de mission sont toujours en processus d'approbation par les membres  
 .btn-group.btn-group-justified.btn-group-lg{role: "group"}
   =link_to "1. Notre mission", mission_path, class: active == :mission ? "btn btn-info" : "btn btn-default"
   =link_to "2. Notre vision", notre_vision_path, class: active == :vision ? "btn btn-info" : "btn btn-default"
