--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -1,11 +1,12 @@
 .well
   %h2.no-margin
-    Nous, CITOYENS CONSTITUANTS, nous nous engageons à promouvoir, exiger et préparer la convocation d'une Assemblée constituante non partisane, et à tout mettre en oeuvre pour obtenir le respect de la volonté du peuple.
+    Nous, CONSTITUANT.E.S, nous nous engageons à promouvoir, à préparer et à exiger la convocation d'une Assemblée constituante non partisane, libre de ses délibérations, et à tout mettre en oeuvre pour obtenir le respect de la volonté du peuple. Nous vous invitons à vous engager avec NOUS.
 
   %p
-    Nous vous invitons à vous engager avec nous. #{link_to "<b>Signez le manifeste!</b>".html_safe, manifest_path, class: "btn btn-danger btn-lg", id: "#sign-manifest"}
-
-
+    #{link_to "<i class='fa fa-pencil-square-o'></i> <b>Signez le manifeste!</b>".html_safe, manifest_path, class: "btn btn-danger btn-lg", id: "#sign-manifest"}
+%p.small
+  %i
+    * Veuillez noter que tout le contenu de notre site web est encore en processus d'approbation.     
 
 .row.regions
   .col-md-6
@@ -28,7 +29,7 @@
   
 
   .col-md-6
-    %h3.sub-section Joignez votre assemblée régionale
+    %h3.sub-section Pour rejoindre votre regroupement régional (ACRQ) 
 
     .row
       -@hives.each_with_index do |h,index|
