--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -41,8 +41,9 @@
         .collapse.navbar-collapse
           %ul.nav.navbar-nav            
             %li= link_to "Accueil", root_path
+            %li= link_to "Constat", constat_path
             %li= link_to "Manifeste", manifest_path
-            %li= link_to "Mission", mission_path            
+            %li= link_to "Mission", mission_path
             %li= link_to "Noyau central", noyau_path
 
             %li.dropdown
@@ -53,6 +54,7 @@
               %ul.dropdown-menu
                 %li= link_to "Bibliothèque".html_safe, bibliotheque_path
                 %li= link_to "Médiathèque".html_safe, mediatheque_path
+                %li= link_to "Outils de promotion", ""
 
             %li.dropdown
               %a{href: "#", class: "dropdown-toggle", "data-toggle" => "dropdown", role: "button", "aria-haspopup" => "true", "aria-expanded" => "false"}
@@ -63,7 +65,6 @@
                 %li= link_to "Couverture médiatique", media_coverage_path
                 %li= link_to "Communiqués de presse", press_releases_path
 
-            %li= link_to "Outils de promotion", ""
             %li= link_to "Nous joindre", ""
     
     -if controller_name == 'home' && action_name=='show'
