Quelques dernières modifications avant mise en ligne officielle

--- a/app/views/home/_mission_nav.haml
+++ b/app/views/home/_mission_nav.haml
@@ -2,5 +2,5 @@
 .btn-group.btn-group-justified.btn-group-lg{role: "group"}
   =link_to "1. Notre mission", mission_path, class: active == :mission ? "btn btn-info" : "btn btn-default"
   =link_to "2. Notre vision", notre_vision_path, class: active == :vision ? "btn btn-info" : "btn btn-default"
-  =link_to "3. Notre moyen", notre_moyen_path, class: active == :moyen ? "btn btn-info" : "btn btn-default"
-  =link_to "4. Nos objectifs", nos_objectifs_path, class: active == :objectifs ? "btn btn-info" : "btn btn-default"
+  =link_to "3. Nos moyens et objectifs", notre_moyen_path, class: active == :moyen ? "btn btn-info" : "btn btn-default"
+  =link_to "4. Nous rejoindre", mission_nous_rejoindre_path, class: active == :nous_rejoindre ? "btn btn-info" : "btn btn-default"
