--- a/app/views/home/constat.haml
+++ b/app/views/home/constat.haml
@@ -6,7 +6,7 @@
 .row
   .col-xs-12
     %blockquote
-      %h3 « Un État constitué par et pour le peuple devient un outil favorisant l'épanouissement individuel et collectif »
+      %h3 « Un État constitué par et pour le peuple est un outil favorisant l'épanouissement individuel et collectif »
 
     %p Ce regroupement de Québécois et de Québécoises est né d'un double constat:
     %ol 
