--- a/app/views/home/moyen.haml
+++ b/app/views/home/moyen.haml
@@ -1,25 +1,66 @@
 -content_for :page_title do
-  Notre moyen
+  Nos moyens et objectifs
 
 -breadcrumb :moyen
+
 
 .row
   .col-md-12    
     =render "mission_nav", active: :moyen
-    %h2.sub-section Assemblée constituante citoyenne du Québec
+    %h2.sub-section L'Assemblée constituante citoyenne du Québec s’engage. Vous engagez-vous avec NOUS?
+
+    %h3 NOS OBJECTIFS
+    %h4 Objectif 1: Promouvoir l’importance d’une démarche constituante afin que notre constitution soit rédigée par et pour le peuple. 
+
+    %p Promouvoir l’importance d’une démarche constituante afin que notre constitution soit rédigée par et pour le peuple.
 
     %p 
-      Notre regroupement d’hommes et de femmes engagés sur la voie d’une véritable démocratie a pour but d’initier la convocation d'une Assemblée constituante indépendante de l’État. Nous sommes déterminés à tout mettre en œuvre pour que la toute première constitution démocratique du Québec soit rédigée par et pour le peuple. Pour démontrer l’efficacité de notre mode de fonctionnement, nous nous engageons ensemble à la rédaction d’une première Constitution préparatoire.
-    %p.lead
-      Nous, Constituants, Constituantes, nous nous engageons à :
-
-    %ul
-
-      %li Promouvoir l’importance d’une démarche constituante citoyenne afin que notre constitution soit rédigée par et pour le peuple.
-      %li Établir une structure organisée, décentralisée et démocratique avec l'objectif de mettre en place une Assemblée constituante citoyenne non partisane, entièrement libre de ses délibérations.
-      %li Regrouper les Québécoises et les Québécois pour qu’ils exercent leur pouvoir constituant en les invitant d’abord à en définir le mode de fonctionnement.
-      %li Instruire les Constituants et les Constituantes en leur offrant des outils d’éducation populaire par notre site WEB, nos séminaires WEB et nos assemblées informatives.  Ces ateliers constituants porteront sur les divers chapitres d'une constitution : choix de société, statut des minorités, langue officielle, laïcité, droits, libertés et responsabilités, services publics, ressources naturelles et environnement, sécurité, politiques économiques, fiscales et monétaires, type de gouvernement, mécanismes de participation des citoyens et des régions, gouvernements territoriaux, etc.
-      %li Inviter tous les Québécois et toutes les Québécoises à participer à l'écriture d'une constitution provisoire.
-      %li Poursuivre les pressions nécessaires sur ceux et celles qui souhaitent nous représenter pour qu'ils ou qu’elles s'engagent, au-delà de toute ligne de parti, à convoquer, sans délai, une Assemblée constituante non partisane et indépendante de l’État, à la suite du prochain rendez-vous électoral québécois.  Cette Assemblée sera mandatée pour rédiger et faire adopter notre toute première constitution démocratique du Québec.
+      %strong Moyens:
+      %ul
+        %li Faire connaître le projet politique d'une assemblée constituante non partisane, libre de ses délibérations, à toute la population du Québec.
+        %li Informer le peuple québécois pour qu’il devienne un peuple constituant en lui offrant des outils d’éducation populaire par notre site internet, nos séminaires en ligne et nos rencontres informatives. 
+        %li Établir des liens avec les différents regroupements de la société civile.   
+        %li Établir des ateliers constituants qui porteront sur les divers chapitres d'une constitution : <i>choix de société, statut des personnes vulnérables, langue officielle, laïcité, droits, libertés et responsabilités, services publics, éducation, ressources naturelles et environnement, sécurité, politiques économiques, fiscales et monétaires, type de gouvernement, mécanismes de participation des citoyens et des citoyennes, et des régions, gouvernements territoriaux, etc.</i>
 
     
+
+
+    %h4 Objectif  2 : Rassembler la population québécoise sur un projet commun tangible puisqu’elle a l’intelligence, la capacité et la détermination :
+    
+    %ol{type: "a"} 
+      %li de définir les règles d’une future Assemblée constituante (mandat, format, critères d'éligibilité, lignes de conduite, statuts et règlements, tirage au sort, etc.);
+      %li d’écrire par elle-même sa propre constitution
+
+    %p 
+      %strong Moyens :
+      %ul
+        %li
+          Établir une structure organisée et démocratique dans chacune des 17 régions du Québec qui aura comme objectif de préparer la mise en place d’une assemblée constituante citoyenne simulée.
+
+        %li Établir un noyau central, composé de différents comités et d’un comité organisateur (COOR) au niveau national, qui permettra l'harmonisation de notre démarche.
+
+        %li Établir une multitude de regroupement de Constituant.e.s  à partir de nos ACRQ.
+
+        %li Regrouper les Québécois et les Québécoises pour qu’ils s’exercent, lors d’ateliers constituants, à rédiger une Loi fondamentale et qu’ils participent aussi à définir le mode de fonctionnement d’une assemblée constituante simulée.
+
+        %li Inviter tous les Constituant.e.s  à participer à l'écriture d'une constitution préparatoire, une fois que nous aurons ensemble défini, son mode de fonctionnement. L’Assemblée constituante citoyenne du Québec orchestrera alors une Constituante simulée. Tous les débats de l’ACCQ seront accessibles par le web. 
+
+        %li Diffuser le résultat de l’expérience constituante à toute la population du Québec.
+
+    %h4 Objectif 3 : D’ici la prochaine élection générale au Québec, faire pression sur les partis et sur l’Assemblée nationale pour nous assurer que soit convoquée, rapidement après l’élection, une Assemblée constituante, totalement libre de ses délibérations. 
+    
+    %p
+      %strong Moyens :
+      %ul 
+        %li Mobiliser un minimum de 100 000 personnes comprenant bien le sens d'une démarche constituante non partisane.
+
+        %li Faire les pressions nécessaires sur ceux et celles qui souhaitent nous représenter pour qu'ils ou qu’elles s'engagent, au-delà de toute ligne de parti, à convoquer, sans délai, une assemblée constituante non partisane, libre de ses délibérations. Suite au prochain rendez-vous électoral québécois, cette Assemblée constituante sera mandatée pour rédiger et faire adopter notre toute première constitution démocratique du Québec qui sera ensuite entérinée par l’ensemble de la population du Québec.
+
+        %li • Un projet est en préparation.
+
+
+    %blockquote 
+      %h2 Un monde libre et responsable déploie ses ailes. ENSEMBLE, prenons notre envol!
+
+    %p= link_to "Pour rejoindre votre Assemblée constituante régionale québécoise (ACRQ)…", hives_path
+      
