--- a/app/views/home/noyau_central.haml
+++ b/app/views/home/noyau_central.haml
@@ -9,10 +9,10 @@
   .col-sm-4
     %h3.sub-section.no-margin Comités
     %ol{type: "A"}
-      %li= link_to "Comité mobilisation et recrutement", ""
-      %li= link_to "Comité financement et trésorerie", ""
-      %li= link_to "Comité communication", ""
-      %li= link_to "Comité éducation populaire", ""
-      %li= link_to "Comité web", ""
-      %li= link_to "Comité secrétariat et registraire", ""
-      %li= link_to "Comité événements", ""
+      %li Comité mobilisation et recrutement
+      %li Comité financement et trésorerie
+      %li Comité communication
+      %li Comité éducation populaire
+      %li Comité web
+      %li Comité secrétariat et registraire
+      %li Comité événements
