--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -54,7 +54,7 @@
               %ul.dropdown-menu
                 %li= link_to "Bibliothèque".html_safe, bibliotheque_path
                 %li= link_to "Médiathèque".html_safe, mediatheque_path
-                %li= link_to "Outils de promotion", ""
+                %li= link_to "Outils de promotion", promotional_tools_path
 
             %li.dropdown
               %a{href: "#", class: "dropdown-toggle", "data-toggle" => "dropdown", role: "button", "aria-haspopup" => "true", "aria-expanded" => "false"}
@@ -65,7 +65,7 @@
                 %li= link_to "Couverture médiatique", media_coverage_path
                 %li= link_to "Communiqués de presse", press_releases_path
 
-            %li= link_to "Nous joindre", ""
+            %li= link_to "Nous joindre", nous_joindre_path
     
     -if controller_name == 'home' && action_name=='show'
       %header
