Ajout du voxpop sur la page d'accueil

--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -11,16 +11,14 @@
 .row.regions
   .col-md-6
     %h3.sub-section Première rencontre nationale
+    %p Les constituant.e.s s'expriment!
+    .youtube-container
+      .youtube-player{"data-id" => "pvR3yU2KB44"}    
+
     %p Roméo Bouchard prend la parole lors de la première rencontre de l'ACCQ
     .youtube-container
       .youtube-player{"data-id" => "YnKJn2_3Dzk"}    
 
-    %p.small * D'autres photos et vidéos sont à venir.
-    -if false
-      %ul
-        %li= link_to "Photos", ""
-        %li= link_to "Vidéos", ""
-        %li= link_to "Communiqué de presse", ""
 
 
     %h3.sub-section Aimez notre page Facebook
