Le dépot de code source est maintenant sur Github (en remplacement de bitbucket)

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -97,5 +97,5 @@
           =image_tag("logo_trans.png", height: 30)
           Assemblée constituante citoyenne du Québec (ACCQ) @#{Date.today.year}
           \-          
-          %i.fa.fa-bitbucket-square
-          Code source sur #{link_to "bitbucket", "https://www.bitbucket.org/flamontagne/accq", target: "_blank"}     
+          %i.fa.fa-github-square
+          Code source sur #{link_to "Github", "https://github.com/accq/site-web", target: "_blank"}     
