--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -1,9 +1,9 @@
 .well
   %h2.no-margin
-    Nous, CONSTITUANT.E.S, nous nous engageons à promouvoir, à préparer et à exiger la convocation d'une Assemblée constituante non partisane, libre de ses délibérations, et à tout mettre en oeuvre pour obtenir le respect de la volonté du peuple. Nous vous invitons à vous engager avec NOUS.
+    Nous, <b>constituant.e.s</b>, nous nous engageons à promouvoir, à préparer et à exiger la convocation d'une Assemblée constituante non partisane, libre de ses délibérations, et à tout mettre en oeuvre pour obtenir le respect de la volonté du peuple.
 
   %p
-    #{link_to "<i class='fa fa-pencil-square-o'></i> <b>Signez le manifeste!</b>".html_safe, manifest_path, class: "btn btn-danger btn-lg", id: "#sign-manifest"}
+    #{link_to "<i class='fa fa-pencil-square-o'></i> Nous vous invitons à vous engager avec NOUS. <b>Signez le manifeste!</b>".html_safe, manifest_path, class: "btn btn-danger btn-lg", id: "#sign-manifest"}
 %p.small
   %i
     * Veuillez noter que tout le contenu de notre site web est encore en processus d'approbation.     
