plusieurs modifications dans le texte de toutes les pages

--- a/app/views/home/manifest.haml
+++ b/app/views/home/manifest.haml
@@ -1,10 +1,10 @@
 -content_for :page_title do
-  Le manifeste de l'ACCQ
+  Le manifeste de l'Assemblée constituante citoyenne du Québec
 
 -breadcrumb :manifest
 .row
   .col-md-8#manifesto
-    %h3 Le manifeste      
+    %h3 Le manifeste *
     %ol
       %li
         Dans une démocratie digne de ce nom, le peuple est souverain. C’est donc à lui de dicter les règles du jeu.
@@ -13,7 +13,7 @@
       %li
         Pour sortir de cette impuissance politique, il ne suffit pas de manifester ni de changer de parti au pouvoir. Il faut changer le régime politique lui-même et les règles du jeu qui sont à la source de notre impuissance.
       %li
-        Le moyen de changer de régime politique, c’est d’écrire la constitution de l’État. Une constitution est ce qui nous définit comme peuple distinct et nous protège des abus de pouvoir. C’est la loi fondamentale que tous les dirigeants, organismes et citoyens doivent respecter.
+        Le moyen de changer de régime politique, c’est d’écrire la constitution de l’État. Une constitution est ce qui nous définit comme peuple distinct et nous protège des abus de pouvoir. C’est la Loi fondamentale que tous les dirigeants, organismes et citoyens doivent respecter.
       %li
         Le peuple québécois ne s’est jamais prononcé sur ce qui lui sert de constitution, aussi bien au Québec qu’au Canada.
       %li
