--- a/app/views/home/moyen.haml
+++ b/app/views/home/moyen.haml
@@ -1,5 +1,5 @@
 -content_for :page_title do
-  Nos moyens et objectifs
+  Moyens et objectifs
 
 -breadcrumb :moyen
 
@@ -7,7 +7,7 @@
 .row
   .col-md-12    
     =render "mission_nav", active: :moyen
-    %h2.sub-section L'Assemblée constituante citoyenne du Québec s’engage. Vous engagez-vous avec NOUS?
+    %h2.sub-section L'Assemblée constituante citoyenne du Québec s’engage à l'instauration d'une véritable démocratie par un processus constituant libre de ses délibérations. Vous engagez-vous avec NOUS?
 
     %h3 NOS OBJECTIFS
     %h4 Objectif 1: Promouvoir l’importance d’une démarche constituante afin que notre constitution soit rédigée par et pour le peuple. 
@@ -15,15 +15,15 @@
     %p 
       %strong Moyens:
       %ul
-        %li Faire connaître le projet politique d'une assemblée constituante non partisane, libre de ses délibérations, à toute la population du Québec.
-        %li Informer le peuple québécois pour qu’il devienne un peuple constituant en lui offrant des outils d’éducation populaire par notre site internet, nos séminaires en ligne et nos rencontres informatives. 
-        %li Établir des liens avec les différents regroupements de la société civile.   
+        %li Faire connaître le projet politique d'une assemblée constituante non partisane, libre de ses délibérations, à la population du Québec.
+        %li Informer le peuple québécois pour qu’il devienne un peuple constituant en lui offrant des outils d’éducation populaire par l'entremise de notre site internet, nos séminaires en ligne et nos rencontres informatives. 
+        %li Bâtir des ponts avec la société civile.   
         %li Établir des ateliers constituants qui porteront sur les divers chapitres d'une constitution : <i>choix de société, statut des personnes vulnérables, langue officielle, laïcité, droits, libertés et responsabilités, services publics, éducation, ressources naturelles et environnement, sécurité, politiques économiques, fiscales et monétaires, type de gouvernement, mécanismes de participation des citoyens et des citoyennes, et des régions, gouvernements territoriaux, etc.</i>
 
     
 
 
-    %h4 Objectif  2 : Rassembler la population québécoise sur un projet commun tangible puisqu’elle a l’intelligence, la capacité et la détermination :
+    %h4 Objectif  2 : Rassembler la population québécoise autour d'un projet commun tangible puisqu’elle a l’intelligence, la capacité et la détermination :
     
     %ol{type: "a"} 
       %li de définir les règles d’une future Assemblée constituante (mandat, format, critères d'éligibilité, lignes de conduite, statuts et règlements, tirage au sort, etc.);
@@ -33,15 +33,15 @@
       %strong Moyens :
       %ul
         %li
-          Établir une structure organisée et démocratique dans chacune des 17 régions du Québec qui aura comme objectif de préparer la mise en place d’une assemblée constituante citoyenne simulée.
+          Établir une structure organisée et démocratique dans chacune des 17 régions du Québec. Cette organisation aura comme objectif de préparer la mise en place d’une assemblée constituante citoyenne simulée.
 
         %li Établir un noyau central, composé de différents comités et d’un comité organisateur (COOR) au niveau national, qui permettra l'harmonisation de notre démarche.
 
-        %li Établir une multitude de regroupement de Constituant.e.s  à partir de nos ACRQ.
+        %li Établir une multitude de regroupements de Constituant.e.s  à partir de nos ACRQ.
 
-        %li Regrouper les Québécois et les Québécoises pour qu’ils s’exercent, lors d’ateliers constituants, à rédiger une Loi fondamentale et qu’ils participent aussi à définir le mode de fonctionnement d’une assemblée constituante simulée.
+        %li Regrouper les Québécois et les Québécoises pour qu’ils s’exercent, lors d’ateliers constituants, à rédiger une Loi fondamentale et participent aussi à définir le mode de fonctionnement d’une assemblée constituante simulée.
 
-        %li Inviter tous les Constituant.e.s  à participer à l'écriture d'une constitution préparatoire, une fois que nous aurons ensemble défini, son mode de fonctionnement. L’Assemblée constituante citoyenne du Québec orchestrera alors une Constituante simulée. Tous les débats de l’ACCQ seront accessibles par le web. 
+        %li Inviter tous les Constituant.e.s  à participer à la rédaction d'une constitution préparatoire, une fois que nous aurons ensemble défini, son mode de fonctionnement. L’Assemblée constituante citoyenne du Québec orchestrera alors une Constituante simulée. Tous les débats de l’Assemblée constituante citoyenne du Québec seront accessibles sur internet. 
 
         %li Diffuser le résultat de l’expérience constituante à toute la population du Québec.
 
@@ -53,9 +53,6 @@
         %li Mobiliser un minimum de 100 000 personnes comprenant bien le sens d'une démarche constituante non partisane.
 
         %li Faire les pressions nécessaires sur ceux et celles qui souhaitent nous représenter pour qu'ils ou qu’elles s'engagent, au-delà de toute ligne de parti, à convoquer, sans délai, une assemblée constituante non partisane, libre de ses délibérations. Suite au prochain rendez-vous électoral québécois, cette Assemblée constituante sera mandatée pour rédiger et faire adopter notre toute première constitution démocratique du Québec qui sera ensuite entérinée par l’ensemble de la population du Québec.
-
-        %li • Un projet est en préparation.
-
 
     %blockquote 
       %h2 Un monde libre et responsable déploie ses ailes. ENSEMBLE, prenons notre envol!
