--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -1,6 +1,6 @@
 .well
   %h2.no-margin
-    Nous, <b>constituant.e.s</b>, nous nous engageons à promouvoir, à préparer et à exiger la convocation d'une Assemblée constituante non partisane, libre de ses délibérations, et à tout mettre en oeuvre pour obtenir le respect de la volonté du peuple.
+    Nous, <b>constituant.e.s</b>, nous nous engageons à promouvoir, à préparer et à exiger la convocation d'une Assemblée constituante non partisane, libre de ses délibérations, et à tout mettre en œuvre pour obtenir le respect de la volonté du peuple.
 
   %p
     #{link_to "<i class='fa fa-pencil-square-o'></i> Nous vous invitons à vous engager avec NOUS. <b>Signez le manifeste!</b>".html_safe, manifest_path, class: "btn btn-danger btn-lg", id: "#sign-manifest"}
@@ -15,7 +15,7 @@
     .youtube-container
       .youtube-player{"data-id" => "pvR3yU2KB44"}    
 
-    %p Roméo Bouchard prend la parole lors de la première rencontre de l'ACCQ
+    %p Roméo Bouchard prend la parole lors de la première rencontre nationale de l'Assemblée constituante citoyenne du Québec.
     .youtube-container
       .youtube-player{"data-id" => "YnKJn2_3Dzk"}    
 
@@ -27,7 +27,7 @@
   
 
   .col-md-6
-    %h3.sub-section Pour rejoindre votre regroupement régional (ACRQ) 
+    %h3.sub-section Pour rejoindre votre Assemblée constituante régionale québecoise (ACRQ) 
 
     .row
       -@hives.each_with_index do |h,index|
