--- a/app/views/home/nous_joindre.haml
+++ b/app/views/home/nous_joindre.haml
@@ -5,4 +5,4 @@
 
 .row
   .col-md-12    
-    %p Lors de la dernière rencontre nationale, les participants ont mandaté un comité organisateur intérimaire. Leurs coordonnées seront disponibles très bientôt.
+    %p Lors de la dernière rencontre nationale, les participants ont créé un comité organisateur intérimaire dont le mandat est de poursuivre la mise en place de la structure nécessaire pour atteindre nos objectifs. Les coordonnées des membres du comité seront disponibles très bientôt.
