Ajouter un avis temporaire concernant la 2ieme table nationale à Lévis

--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -10,6 +10,8 @@
 
 .row.regions
   .col-md-6
+    %h3.sub-section Prochaine rencontre nationale à Lévis!
+    %p <b>Avis important!</b> Notre deuxième rencontre nationale se tiendra les 31 octobre et 1er novembre 2015 à Lévis. Joignez-vous à NOUS! (plus de détails à venir)
     %h3.sub-section Première rencontre nationale
     %p Les constituant.e.s s'expriment!
     .youtube-container
