--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -11,7 +11,7 @@
 .row.regions
   .col-md-6
     %h3.sub-section Prochaine rencontre nationale à Lévis!
-    %p <b>Avis important!</b> Notre deuxième rencontre nationale se tiendra les 31 octobre et 1er novembre 2015 à Lévis. Joignez-vous à NOUS! (plus de détails à venir)
+    %p <b>Avis important!</b> Notre deuxième rencontre nationale se tiendra les 31 octobre et 1er novembre 2015 à Lévis. #{link_to "Joignez-vous à NOUS!", action: :deuxieme_rencontre_nationale}
     %h3.sub-section Première rencontre nationale
     %p Les constituant.e.s s'expriment!
     .youtube-container
