événement et non évenement

--- a/app/views/home/deuxieme_rencontre_nationale.haml
+++ b/app/views/home/deuxieme_rencontre_nationale.haml
@@ -30,4 +30,4 @@
     %p Pour faire de cette deuxième rencontre nationale, un événement marquant vers la réalisation de nos objectifs, nous comptons sur votre implication et sur votre présence !
 
     %p
-      =link_to "<i class='fa fa-facebook-square'></i> Consultez l'évenement Facebook pour plus de détails".html_safe, "https://www.facebook.com/events/470110276483190/", target: "_blank"
+      =link_to "<i class='fa fa-facebook-square'></i> Consultez l'événement Facebook pour plus de détails".html_safe, "https://www.facebook.com/events/470110276483190/", target: "_blank"
