Ajouter le Comité des Opérations intérimaire dans la page Nous Joindre

--- a/app/views/home/nous_joindre.haml
+++ b/app/views/home/nous_joindre.haml
@@ -5,4 +5,40 @@
 
 .row
   .col-md-12    
-    %p Lors de la dernière rencontre nationale, les participants ont créé un comité organisateur intérimaire dont le mandat est de poursuivre la mise en place de la structure nécessaire pour atteindre nos objectifs. Les coordonnées des membres du comité seront disponibles très bientôt.
+    %p
+      Lors de la dernière rencontre nationale à Drummondville, l’assemblée a créé un <b>Conseil des Opérations Intérimaire</b> (C.O.I.). Ce conseil est formé de sept membres dont, une secrétaire, un trésorier et 5 conseillers (administrateurs) et il a le mandat de poursuivre la mise en place de la structure organisationnelle nécessaire pour l’atteinte de nos objectifs et de préparer un projet d'un organisme sans but lucratif. (OSBL)
+
+    %p
+      %i Le mandat du C.O.I. se termine le 31 décembre 2015.
+
+    %table.table.table-striped
+      %thead
+        %tr
+          %th Fonction
+          %th Citoyen.ne
+      %tbody
+        %tr
+          %td Secrétaire
+          %td Martine Labossière
+        %tr
+          %td Trésorier
+          %td Marc Dion
+        %tr
+          %td Conseiller
+          %td Jean-Philippe Thouin
+        %tr
+          %td Conseiller
+          %td Carl Hurtubise
+        %tr
+          %td Conseiller
+          %td Louis Gingras
+        %tr
+          %td Conseiller
+          %td Daniel Dion
+        %tr
+          %td Conseiller
+          %td Alain Marquis Bergeron
+
+
+
+.alert.alert-info Pour nous joindre: #{mail_to "coi@constituantecitoyenne.quebec"}
