--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{:charset => "utf-8"}
-    %title L'Assembléé constituante citoyenne du Québec #{content_for?(:page_title) ? " - " + yield(:page_title) : ""}
+    %title L'Assemblée constituante citoyenne du Québec #{content_for?(:page_title) ? " - " + yield(:page_title) : ""}
     %meta{:content => "width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no", :name => "viewport"}
     %meta{:name => "viewport", :content => "initial-scale=1.0, user-scalable=no"}
     %meta{:content => "", :name => "description"}
