--- a/app/views/admin/members/index.haml
+++ b/app/views/admin/members/index.haml
@@ -1,5 +1,7 @@
 -content_for :page_title do
-  Liste des signataires
+  Liste des signatures
+
+-breadcrumb :admin_members
 .row
   .col-xs-12  
     -if @unconfirmed_members.any?
