--- a/app/views/admin/hives/index.haml
+++ b/app/views/admin/hives/index.haml
@@ -1,21 +1,15 @@
 -content_for :page_title do
   Gestion des ACRQ
 
+-breadcrumb :admin_hives
 .row
-  .col-xs-12
-    %p
-      =link_to "<i class='fa fa-plus'></i> Ajouter une ACRQ".html_safe, new_admin_hive_path, class: "btn btn-info", id: "add-hive"
-    %table.table.table-striped.table-hover
-      %thead
-        %tr
-          %th Numéro
-          %th Nom
-          %th
-      %tbody
-        -@hives.each do |h|
-          %tr
-            %td= show_hive_number(h.number)
-            %td= h.name
-            %td
-              =link_to "Modifier", edit_admin_hive_path(h), class: "btn btn-info btn-xs"
-              =link_to "Supprimer", admin_hive_path(h), class: "btn btn-danger btn-xs", data: {confirm: "Attention! Voulez-vous vraiment supprimer cette ACRQ?"}, method: :delete
+  -@hives.each do |h|
+    .col-md-3.col-sm-6
+      .btn-group.hive-dropdown
+        %button.btn.btn-default.btn-md.dropdown-toggle{type: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false"}
+          %strong=show_hive_number(h.number) + ". " + h.name
+          %span.caret
+        %ul.dropdown-menu
+          %li= link_to "Informations", edit_admin_hive_path(h)
+          %li= link_to "Responsables", admin_hive_hive_contacts_path(h)
+          %li= link_to "Réunions", admin_hive_hive_meetings_path(h)
