Mettre à jour l'image de la 2ieme rencontre nationale et empecher que celle-ci s'affiche pour les appareils mobiles

--- a/app/views/home/deuxieme_rencontre_nationale.haml
+++ b/app/views/home/deuxieme_rencontre_nationale.haml
@@ -3,8 +3,8 @@
 
 .row  
   .col-xs-12
-    %p
-      =image_tag "https://scontent-lga1-1.xx.fbcdn.net/hphotos-xpa1/t31.0-8/12006522_1258837200809161_66006743461685809_o.jpg", class: "img-responsive thumbnail"
+    %p.hidden-xs.hidden-sm
+      =image_tag "https://scontent-lga3-1.xx.fbcdn.net/hphotos-xap1/t31.0-8/12138472_1268636136495934_6755082089540774926_o.jpg", class: "img-responsive thumbnail"      
     %p.lead
       Ami.e.s Constituant.e.s,
 
